--- a/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
+++ b/lesson2/examples/ngif-practice/src/app/chores/chores.component.html
@@ -3,6 +3,7 @@
     <ul>
         <li *ngFor = 'let chore of chores'>{{chore}}</li>
     </ul>
+    <p id="workHarder" *ngIf = "chores.length>finishedChores.length">Work Harder!</p>
 </div>
 <hr>
 <div class="doneChores">
@@ -10,5 +11,12 @@
     <ul>
         <li *ngFor = 'let done of finishedChores'>{{done}}</li>
     </ul>
+    <div *ngIf = "chores.length===0 || finishedChores.length-chores.length>=3; else noAllowance">
+        <img src={{targetImage}} alt="targetImage">
+    </div>
 </div>
 <hr>
+
+<ng-template #noAllowance>
+    <p>No allowance yet</p>
+</ng-template>
